Fixed svg text alignment in app.css and index.html

--- a/css/app.css
+++ b/css/app.css
@@ -18,7 +18,7 @@ svg text{
 
 /* Game over screen */
 #game-over{
-    display: block;
+    display: none;
 }
 #game-over #game-over-title {
     font-size: 1400%;
